# mullama

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  wrapper.h
cli/: Cargo.toml
cli/src/: main.rs
docs/: API_REFERENCE.md
examples/: advanced_generation.rs  async_generation.rs  batch.rs  benchmarks.rs  builder_patterns.rs  chat.rs  complete_integration_demo.rs  configuration_management.rs  embedding.rs  ffi_test.rs  integration_showcase.rs  session.rs  simple.rs  simple_generation.rs  streaming_audio_demo.rs  streaming_generation.rs  web_service.rs
src/: async_support.rs  batch.rs  builder.rs  config.rs  context.rs  control_vector.rs  embedding.rs  error.rs  format_conversion.rs  grammar.rs  huggingface.rs  lib.rs  lora.rs  memory.rs  model.rs  multimodal.rs  parallel.rs  quantization.rs  sampling.rs  session.rs  streaming.rs  streaming_audio.rs  sys.rs  token.rs  tokio_integration.rs  vocab.rs  web.rs  websockets.rs
src/daemon/: client.rs  hf.rs  mod.rs  server.rs  tui.rs
tests/: benchmark_tests.rs  doc_tests.rs  error_tests.rs  huggingface_integration_tests.rs  integration_tests.rs  model_integration_tests.rs  sampling_tests.rs  simple_test.rs  unit_tests.rs
