[package]
name = "mullama"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A safe Rust wrapper for llama.cpp with built-in compilation"
license = "MIT"
repository = "https://github.com/yourusername/mullama"
readme = "README.md"
keywords = ["llm", "llama", "ai", "nlp", "bindings"]
categories = ["api-bindings", "science"]
links = "llama"
build = "build.rs"

[dependencies]
thiserror = "1.0"
libloading = "0.8"
num_enum = "0.7"
num_cpus = "1.0"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
pkg-config = "0.3"
bindgen = "0.69"

[dev-dependencies]
anyhow = "1.0"